# oss_hw1_vibecoding

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: dependencies.py  main.py  security.py  settings.py
backend/app/api/: auth.py  toilets.py
backend/app/db/: database.py  schema.py
backend/app/repositories/: toilets.py  users.py
backend/app/schemas/: auth.py  toilets.py
backend/app/services/: importer.py
frontend/: Dockerfile  app.py  pyproject.toml
