[project]
name = "frontend"
version = "0.2.0"
description = "Streamlit frontend for the public toilet map app."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pydeck>=0.9.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "streamlit>=1.44.0",
    "streamlit-geolocation>=0.0.10",
]

[tool.streamlit]
server.headless = true
